<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.dream2d.nppang"
    android:id="@+id/drawer_layout_left_to_right"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/linear_layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="?android:attr/actionBarSize" >

            <!-- 첫번쨰 줄 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/text_view_total_amount"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="10dip"
                    android:text="@string/total_amount" />

                <EditText
                    android:id="@+id/edit_text_total_amount"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="문자에서" />
            </LinearLayout>

            <!-- 두번쨰 줄 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <!-- 빈 Layout -->

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/text_view_nppang_amount"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/n" />

                    <Spinner
                        android:id="@+id/spinner_nppang_count_of_person"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <!-- 세번쨰 줄 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView                    
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/bank" />

                <Spinner
                    android:id="@+id/spinner_bank_list"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/load_from_sms" />
            </LinearLayout>

            <!-- 네번쨰 줄 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" >

                    <!-- 빈 Layout -->

                    <LinearLayout
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <EditText
                        android:id="@+id/edit_text_account_number"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:hint="@string/account_number" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edit_text_account_owner"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/account_owner" />
            </LinearLayout>
            
            
            <!-- 다섯번쨰 줄 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/text_view_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item" />
                <Spinner
                    android:id="@+id/spinner_item_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item" />
                
            </LinearLayout>
            
            
        </LinearLayout>

        <com.fsn.cauly.CaulyAdView
            android:id="@+id/cauly_ad_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:appcode="7jpEiQ0c"
            app:effect="LeftSlide" />

        <com.dream2d.nppang.SlidingDrawer
            android:id="@+id/sliding_drawer_down_to_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/cauly_ad_view"
            android:allowSingleTap="true"
            app:content="@+id/linear_layout_content"
            app:handle="@+id/handle"
            app:orientation="vertical" >

            <Button
                android:id="@+id/handle"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="-----"
                android:textSize="10dip" />

            <LinearLayout
                android:id="@+id/linear_layout_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SlidingDrawer의 content 부분입니다." />

                <GridView
                    android:id="@+id/grid_view_nppang_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:numColumns="auto_fit"
                    android:stretchMode="columnWidth" >
                </GridView>
            </LinearLayout>
        </com.dream2d.nppang.SlidingDrawer>
    </RelativeLayout>

    <ListView
        android:id="@+id/list_view_left_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:paddingTop="?android:attr/actionBarSize" />

</android.support.v4.widget.DrawerLayout>